// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvailableFlavors
    block={
        Object {
            "title": "",
          }
    }
    drip={false}
    location={
        Object {
            "sys": Object {
              "id": "foo",
            },
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="mx-auto mt2 flex flex-column items-center container-width"
>
        <h2
                className="block-headline center mb3"
        />
        <div
                className="flex flex-wrap items-center justify-center"
        >
                
        </div>
</div>,
      "className": "py4 px3",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline center mb3"
/>,
          <div
            className="flex flex-wrap items-center justify-center"
>
            
</div>,
        ],
        "className": "mx-auto mt2 flex flex-column items-center container-width",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "block-headline center mb3",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [],
              null,
            ],
            "className": "flex flex-wrap items-center justify-center",
          },
          "ref": null,
          "rendered": Array [
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="mx-auto mt2 flex flex-column items-center container-width"
>
          <h2
                    className="block-headline center mb3"
          />
          <div
                    className="flex flex-wrap items-center justify-center"
          >
                    
          </div>
</div>,
        "className": "py4 px3",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline center mb3"
/>,
            <div
              className="flex flex-wrap items-center justify-center"
>
              
</div>,
          ],
          "className": "mx-auto mt2 flex flex-column items-center container-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "block-headline center mb3",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [],
                null,
              ],
              "className": "flex flex-wrap items-center justify-center",
            },
            "ref": null,
            "rendered": Array [
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvailableFlavors
    block={
        Object {
            "title": "",
          }
    }
    drip={false}
    location={
        Object {
            "address1": "",
            "address2": "",
            "city": "",
            "coordinates": Object {
              "lat": 0,
              "lon": 0,
            },
            "delivery": false,
            "hours": Object {
              "friday": "",
              "monday": "",
              "saturday": "",
              "sunday": "",
              "thursday": "",
              "tuesday": "",
              "wednesday": "",
            },
            "id": "",
            "image": "",
            "phone": "",
            "region": "",
            "seasonal": true,
            "seasonalImage": "",
            "state": "",
            "text": "",
            "title": "",
            "zip": "",
          }
    }
    setRef={[Function]}
    z={1}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="mx-auto mt2 flex flex-column items-center container-width"
>
        <h2
                className="block-headline center mb3"
        />
        <div
                className="flex flex-wrap items-center justify-center"
        >
                
        </div>
</div>,
      "className": "py4 px3",
      "style": Object {
        "zIndex": 1,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="block-headline center mb3"
/>,
          <div
            className="flex flex-wrap items-center justify-center"
>
            
</div>,
        ],
        "className": "mx-auto mt2 flex flex-column items-center container-width",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "block-headline center mb3",
          },
          "ref": null,
          "rendered": "",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [],
              null,
            ],
            "className": "flex flex-wrap items-center justify-center",
          },
          "ref": null,
          "rendered": Array [
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="mx-auto mt2 flex flex-column items-center container-width"
>
          <h2
                    className="block-headline center mb3"
          />
          <div
                    className="flex flex-wrap items-center justify-center"
          >
                    
          </div>
</div>,
        "className": "py4 px3",
        "style": Object {
          "zIndex": 1,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="block-headline center mb3"
/>,
            <div
              className="flex flex-wrap items-center justify-center"
>
              
</div>,
          ],
          "className": "mx-auto mt2 flex flex-column items-center container-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "block-headline center mb3",
            },
            "ref": null,
            "rendered": "",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [],
                null,
              ],
              "className": "flex flex-wrap items-center justify-center",
            },
            "ref": null,
            "rendered": Array [
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
